+ {collapse/expand} all; + rounded rectangle border around the whole page; + fixed positioning of age box; + emacs-style shortcut keys

--- a/mysite/static/style/all.css
+++ b/mysite/static/style/all.css
@@ -1,11 +1,17 @@
 body {
 	font: .85em/130% Arial, "Bitstream Vera Sans", "Lucida Grande", Verdana, Arial, sans-serif;
-	background-color: #fff;
+	background-color: #eef;
 }
 h1, h2, h3, h4, h5 {
 	font-family: Trebuchet MS;
 	font-weight: normal;
 	margin: 0;
+}
+#banner {
+	font: bold 23pt Tuffy;
+	margin: 10px 0;
+	text-align: center;
+	color: #3d220e;
 }
 a {
 	color: #379;
@@ -19,7 +25,14 @@ h1 {
 	width: 800px;
 }
 #wrapper-inner {
+}
+#content {
 	width: 800px;
+	padding: 20px;
+	border: 1px solid #d2e6df;
+	-moz-border-radius: 10px;
+	background-color: #fff;
+	float: left;
 }
 #heading {
 	margin: 20px 0 10px 0;
@@ -48,9 +61,6 @@ h1 {
 #main .box {
 	width: 580px;
 	float: left;
-}
-#main-1 {
-	height: 400px;
 }
 #projects table {
 	padding: 0;
@@ -98,7 +108,7 @@ p {
 	background-color: #fff;
 	width: 555px;
 	margin-top: 3px;
-	height: 4em;
+	height: 4.1em;
 	white-space: nowrap;
 }
 #opps li {
@@ -106,19 +116,21 @@ p {
 }
 #opps li .age {
 	float: left;
-	text-align: right;
 	padding: .3em .7em;
+	width: 71px;
+	text-align: right;
 }
 #opps li .details {
-	display: none;
-	border-top: 1px dotted #ccf;
+	border-top: 1px solid #ccf;
 	padding: .3em .7em;
 	padding-top: 0;
 	float: left;
 	font-size: 90%;
 	background-color: #eeeefc;
 }
-#opps li.expanded .details {
+#opps li .details .fields {
+}
+#opps li.expanded .details .fields {
 	display: block;
 }
 #opps li label {
@@ -140,11 +152,6 @@ p {
 #opps li .tags .project {
 	padding: .3em .7em;
 	float: left;
-}
-#opps li .quick-summary {
-}
-#opps li.expanded .first-line {
-	
 }
 #opps li.expanded .title {
 	font-weight: bold;
@@ -183,7 +190,11 @@ p {
 	display: block;
 }
 #opps li.lit-up .first-line {
-	background-color: #efd;
+}
+#opps li.lit-up {
+}
+#opps li.lit-up .first-line a {
+	font-weight: bold;
 }
 #opps li .second-line {
 	display: block;
@@ -191,19 +202,20 @@ p {
 }
 #opps li .show-details {
 	padding: .3em .7em;
-	float: right;
-	width: 36px;
+	float: left;
+	width: 71px;
+	text-align: right;
 }
 #opps li.expanded .second-line {
 	padding: 0;
 }
 #opps li .title {
 	float: left;
-	width: 400px;
+	width: 445px;
 	padding: .3em .7em;
 }
 #opps li .description {
-	width: 455px;
+	width: 445px;
 	padding: .3em .7em;
 	color: #888;
 	float: left;
